--- a/BasicCode.html
+++ b/BasicCode.html
@@ -11,6 +11,7 @@
             background-color: rgb(243, 173, 123);
             border: 1px solid black;
             border-radius: 10px;
+            margin: 30px;
         }
     </style>
 </head>
@@ -19,5 +20,8 @@
     <div class="text">
       <h1>Amruta Shinde</h1>
     </div>
+    <div class="text">
+        <h1>Amruta Shinde</h1>
+      </div>
 </body>
 </html>
