changes by Poonam

--- a/BasicCode.html
+++ b/BasicCode.html
@@ -21,7 +21,7 @@
       <h1>Amruta Shinde</h1>
     </div>
     <div class="text">
-        <h1>Amruta Shinde</h1>
+        <h1>Poonam Bhagat</h1>
       </div>
 </body>
 </html>
